// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BezwarenStatusLines > should render the right snapshot when status is done 1`] = `
<DocumentFragment>
  <div
    class="_StatusLine_a12ff2"
  >
    <h4
      class="ams-heading ams-heading--4 _ListHeading_a12ff2"
    >
      Status
    </h4>
    <ul
      class="_List_a12ff2"
    >
      <li
        class="_ListItem_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              Ontvangen
            </strong>
            <time
              class="_StatusDate_a12ff2"
            >
              29 maart 2023
            </time>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
      <li
        class="_ListItem_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2 _ConnectLine--checked_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              In behandeling
            </strong>
            <time
              class="_StatusDate_a12ff2"
            >
              02 april 2023
            </time>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
      <li
        class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2 _ConnectLine--end-active_a12ff2 _ConnectLine--end-checked_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              Afgehandeld
            </strong>
            <time
              class="_StatusDate_a12ff2"
            >
              05 april 2023
            </time>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`BezwarenStatusLines > should render the right snapshot when status is in progress 1`] = `
<DocumentFragment>
  <div
    class="_StatusLine_a12ff2"
  >
    <h4
      class="ams-heading ams-heading--4 _ListHeading_a12ff2"
    >
      Status
    </h4>
    <ul
      class="_List_a12ff2"
    >
      <li
        class="_ListItem_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2 _ConnectLine--start-checked_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2 _Checkmark--checked_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              Ontvangen
            </strong>
            <time
              class="_StatusDate_a12ff2"
            >
              29 maart 2023
            </time>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
      <li
        class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2 _ConnectLine--middle-checked-next_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              In behandeling
            </strong>
            <time
              class="_StatusDate_a12ff2"
            >
              02 april 2023
            </time>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
      <li
        class="_ListItem_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              Afgehandeld
            </strong>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`BezwarenStatusLines > should render the right snapshot when status is received 1`] = `
<DocumentFragment>
  <div
    class="_StatusLine_a12ff2"
  >
    <h4
      class="ams-heading ams-heading--4 _ListHeading_a12ff2"
    >
      Status
    </h4>
    <ul
      class="_List_a12ff2"
    >
      <li
        class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2 _ConnectLine--start_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              Ontvangen
            </strong>
            <time
              class="_StatusDate_a12ff2"
            >
              29 maart 2023
            </time>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
      <li
        class="_ListItem_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              In behandeling
            </strong>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
      <li
        class="_ListItem_a12ff2"
      >
        <div
          class="_ListItemInner_a12ff2"
        >
          <div
            aria-label="Vinkje, processtap gereed"
            class="_StatusConnection_a12ff2"
          >
            <span
              class="_ConnectLine_a12ff2 _ConnectLine--end_a12ff2"
            />
            <span
              class="_Checkmark_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--status_a12ff2"
          >
            <strong
              class="_StatusTitle_a12ff2"
            >
              Afgehandeld
            </strong>
          </div>
          <div
            class="_Panel_a12ff2 _Panel--description_a12ff2"
          >
            <div
              class="_PanelContent_a12ff2"
            />
          </div>
          <div
            class="_Panel_a12ff2 _Panel--documents_a12ff2"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
